--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -2,7 +2,7 @@
   "appId": "com.example.app",
   "appName": "capacitor-app",
   "bundledWebRuntime": false,
-  "webDir": "dist",
+  "webDir": "src",
   "plugins": {
     "SplashScreen": {
       "launchShowDuration": 0
